[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/UI/Pause_menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Default_theme.tres" type="Theme" id=2]
[ext_resource path="res://SFX/SFX/Kill.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/SFX/cartoony_step_1.wav" type="AudioStream" id=4]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=5]

[sub_resource type="InputEventAction" id=1]
action = "pause"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Pause_menu" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 1 )

[node name="Back_layer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -22.0
margin_right = 32.0
margin_bottom = 22.0
theme = ExtResource( 2 )

[node name="Resume_button" type="Button" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 22.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Resume"

[node name="Quit_button" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 64.0
margin_bottom = 48.0
text = "Quit"

[node name="SFX" type="Node" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="SFX"]
bus = "Game"
script = ExtResource( 5 )
samples = [ ExtResource( 4 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[node name="Select" type="AudioStreamPlayer" parent="SFX"]
bus = "Game"
script = ExtResource( 5 )
samples = [ ExtResource( 3 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[connection signal="pressed" from="VBoxContainer/Resume_button" to="." method="_on_Resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_button" to="." method="_on_Quit_button_pressed"]
